--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,18 @@ repositories {
 
 dependencies {
     implementation 'io.qameta.allure:allure-selenide:2.21.0'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'com.codeborne:selenide:6.13.0'
     testImplementation 'io.cucumber:cucumber-java:7.1.0'
     testImplementation 'io.cucumber:cucumber-junit:7.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
+    scanForTestClasses = true
+    include '**/*Test.class'
 }
