Обновил build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.qameta.allure:allure-selenide:2.21.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'com.codeborne:selenide:6.13.0'
     testImplementation 'io.cucumber:cucumber-java:7.1.0'
-    testImplementation 'io.cucumber:cucumber-junit:7.1.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    implementation 'io.qameta.allure:allure-selenide:2.21.0'
 }
 
 test {
